Remove -Xverify:none since it has no effect anymore with Java >= 13
https://bugs.openjdk.java.net/browse/JDK-8214731